11/14/16 -the button align fix

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ img {
 	background-color: #674ea7;
 	border-color: #674ea7;
 	vertical-align: bottom;
-	margin-top-width: 40;
+	margin-top-width: 45;
 }
 .btn:hover {
 	color: white;
